--- a/Exercise1_02/docker-compose.yml
+++ b/Exercise1_02/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   frontend:
-    image: server102
+    image: vuolahti/server102
     build:
       context: .
+      args:
+        - _PORT_=${_PORT_}
+        - _NGINX_PORT_=${_NGINX_PORT_}
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - "8080:80"
-    environment:
-      - PORT=8080
-      - NGINX_PORT=80
+      - ${_PORT_}:${_NGINX_PORT_}
