--- a/Exercise2_04/manifests_old/deployment_backend.yaml
+++ b/Exercise2_04/manifests_old/deployment_backend.yaml
@@ -18,3 +18,7 @@ spec:
       containers:
         - name: backend
           image: vuolahti/backend:03
+          imagePullPolicy: Always
+          envFrom:
+            - secretRef:
+                name: database-keys
