--- a/Exercise2_04/manifests_old/ingress.yaml
+++ b/Exercise2_04/manifests_old/ingress.yaml
@@ -11,14 +11,15 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: taskproject-svc
+            name: frontend-svc
             port:
               number: 2345
       - path: /api
         pathType: Prefix
         backend:
           service:
-            name: taskproject-svc
+            name: backend-svc
             port:
               number: 2346
+
 
