--- a/Exercise2_10/manifests/secret.enc.yaml
+++ b/Exercise2_10/manifests/secret.enc.yaml
@@ -1,11 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:QIM=,iv:t1WR33Yv2/ntUXUoTIJB+ACSu6CIyPFx0pcCPTnSdGU=,tag:h2bZmyh2OJ7o1j+m2zhicw==,type:str]
-kind: ENC[AES256_GCM,data:ADV9Arn3,iv:yqJfZxientjOX8vhPI8n9H8IdCe/aIGZWQGlpqjlEdQ=,tag:O6VKBUTR+VmsT4D3tfV/Dw==,type:str]
+apiVersion: ENC[AES256_GCM,data://A=,iv:MEe/Wb/+5Ul2roX5YB8wRadEts26zOiJKH45AEQttDM=,tag:m2xgIY/ZqwX8LxUZm4w9Og==,type:str]
+kind: ENC[AES256_GCM,data:I+EjML+G,iv:jbw470LtBsPp0e93Vc5IRjPtHiWnJ5EvxDtd3AXWq9M=,tag:Fe7U1V3tTMWiG6DKsxccvA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:11TgT86nO7goF3+dmQ==,iv:dea9/foBrpsIe22xH9dFape59AHc7JpqxsPn4GIEHME=,tag:yqlG0Y2TrBLgyhEVDYuSjw==,type:str]
-    namespace: ENC[AES256_GCM,data:KwbDtBJr7A==,iv:Xo8KZuQr8X3JN0AaP3N5YvfJSWx9MMobpPR7gZ8tz3A=,tag:YOmeKR40JvmrtqTd+rWaWw==,type:str]
+    name: ENC[AES256_GCM,data:5rOwreMgZMZvHu6s4g==,iv:fB9gQ+2Sgw0BrMy2zxpJSQ94n/HLGYKNaCWnSiVawM0=,tag:byl5GrUzAQyTqDleZzr3mw==,type:str]
+    namespace: ENC[AES256_GCM,data:jg05CrjFCA==,iv:1SPfEqBI/YvT6fFMkPx/EzWTVD7/oNTgAsmefC9Ri7U=,tag:a2FE/yyk6pqCCRRDh6C52A==,type:str]
 data:
-    MARIADB_USER: ENC[AES256_GCM,data:JKF26Iecq60=,iv:NLOsKoJOT21vwdAkZapvjpqJ4w1t4qj7zDeGbZkOPpk=,tag:PkcZ0a8zdC1aSX8QWudN9w==,type:str]
-    MARIADB_PASSWORD: ENC[AES256_GCM,data:4Ff4UkUnzM3mCt51,iv:cf4WwgHrIIYo4YNcVBjx96JgpRjq2nxDB2K38kIMvpo=,tag:W7lZoin8bURS2GxvtRs+KQ==,type:str]
+    MARIADB_USER: ENC[AES256_GCM,data:oQ6yZ5eYPTs=,iv:amE6BPokdCsziVAbIg6dlPd1gJtF1B/IVHtkHs857Z4=,tag:KBc/RPMbBZ2+fYTHSvClOQ==,type:str]
+    MARIADB_PASSWORD: ENC[AES256_GCM,data:1vrC0DwOoBoc7uLv,iv:9Gi6c13EsPcDop9qbWUZXtxhUZ1ZYPXANC0nEZZpgvs=,tag:TRS3vGbfqknTOyKoTf96Nw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1mnlzh68ha9kxmenfswf2c8gzp46usfgfhf9j4etjtuhxru0jepvsg2knjr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArbWM4N0RvSE9mZVBYVWxK
-            MGhrczJEMjU5MDN0Wld2ZXJrS252VlZFUG5NCi9jN0oxaU95bnBWT3BNeUJqaytW
-            amVVRFJ2SzQrS2ZzZE9pQkx3Qitka3MKLS0tIGNDekROQ3YzaVFDcmxuOHRkdy81
-            SkVKalJaMVMwYnVJakIwTjhNd3UxdnMKJ7+f5MMnJNd2Vlj2TF/wip7jSJmC9pYm
-            7XlEzd3/KqBTGJfS4vkR+Clk8PyEnTn7SxJLeYXj4t7MU+2Mr9wxMQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxV2NMRCtKZEliMXR6TTZa
+            Y1RYNkc1RFV3dE5NVnRnODJqcnRZSUdBMmhNCkhRWkFUSEtOVmRHMU5RSytUS2l1
+            UEpNYmtod1hjMm5aU3F1UmtKTzBoKzAKLS0tIFNHamdkb25NQmpiSFJSOXFpWnFp
+            TDFmU1ZiZmJlazFiSldGcUtOZVBFekUKaEpaiKJ3GNKfxik2UP2LX4tYUkngQJ+k
+            7Nw1xtfgWjlXW9T0owek+DOVPYl4v1hxsls+PMTXejz2z5wFuKy9jA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-07-26T17:41:42Z"
-    mac: ENC[AES256_GCM,data:RwKkdmpGNxDeOImZELaxY2LzIhwyVUMD8VGixtAVr/zBbrT03jE2P9fiqa7k09laZHuRLv74Ut/heYrBA5zVqRWRoZ+LJjLaGS/1UlN6xt9FPf6uy5ACuBFYMJQtGT9YaFL+HyLSEOEzI5LNp8fRRbPVM3SfR5tsO2Ar2d2RsvE=,iv:szJQJlbSIPV3FzrXaBSGgCXfE0Ok5CCld0FCwCHSKZE=,tag:EBNC7RnyMQR+U+4iQBns3A==,type:str]
+    lastmodified: "2022-08-12T16:41:48Z"
+    mac: ENC[AES256_GCM,data:lEu2jpA1i216cRvSPPAeSWKMM3DbXIuf15tTGqjbxielwCLZz/xp7XWEXC9TdtvEAbcIxV+upC/mNSYqG/QuHpQtbeXe3neJD9UmY3b0bhc/e1xY1/T1pEX0Ja7R3r2QjfakqQs+D6mEPGMXY6vKkUdElPVxU28ifTMRMqLyQnM=,iv:W+NWKsG9OYCKGL3EjSxykzEjd66kHhoklhCeNepJw8M=,tag:2mazZHm5N3NHFBUZ5J0jzA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
