--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,10 +12,9 @@ jobs:
   build-push-deploy:
     name: Build, Publish and Deploy
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
-        uses: actions/checkout
+        uses: actions/checkout@v2
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@master
         with:
