--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ env:
   GKE_ZONE: europe-north1-b
   IMAGE: dwk-environments
 jobs:
-  build-push-deploy:
+  build-publish-deploy:
     name: Build, Publish and Deploy
     runs-on: ubuntu-latest
     steps:
