--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,28 +13,22 @@ jobs:
     name: Build, Publish and Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+      - uses: actions/checkout@v2
+      - uses: google-github-actions/setup-gcloud@master
         with:
           project_id: ${{ secrets.GKE_PROJECT }}
           service_account_key: ${{ secrets.GKE_SA_KEY }}
           export_default_credentials: true
-        - run: gcloud --quiet auth configure-docker
-        - run: gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
-      - name: Build
-        run:  |-
+      - run: gcloud --quiet auth configure-docker
+      - run: gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+      - run:  |-
           docker build \
           --tag "gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA" \
           .
-      - name: Publish
-        run: |-
+      - run: |-
           docker push "gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
-      - name: Set up Kustomize
-        uses: imranismail/setup-kustomize@v1
-      - name: Deploy
-        run: |-
+      - uses: imranismail/setup-kustomize@v1
+      - run: |-
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE=gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
           kubectl rollout status deployment $IMAGE
