--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
       - run:  |-
           docker build \
           --tag gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA \
-          .
+          ./deploymentPipeline
       - run: |-
           docker push gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
       - uses: imranismail/setup-kustomize@v1
