--- a/Exercise2_08/V2_headless/manifests/service.yaml
+++ b/Exercise2_08/V2_headless/manifests/service.yaml
@@ -2,13 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: taskproject-svc
-  namespace: project
+#  namespace: project
   labels:
-    app: tsp
+    app: tspsvc
 spec:
-  type: LoadBalancer
-  selector:
-    app: tsp
   ports:
   - port: 8080
     protocol: TCP
@@ -19,3 +16,6 @@ spec:
   - port: 3306
     protocol: TCP
     name: mariadb-port
+  clusterIP: None
+  selector:
+    app: tsp
